refactor: search for docker-compose updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,7 +16,7 @@ updates:
           - "major"
 
   # Config for docker-compose
-  - package-ecosystem: docker-compose
+  - package-ecosystem: "docker-compose"
     directory: "/"
     schedule:
       interval: monthly
