--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-spring_version = "3.5.0"
+spring_version = "3.5.3"
 spring_dependency_version = "1.1.7"
 mockk_version = "1.14.2"
 spring_mockk_version = "4.0.2"
@@ -41,4 +41,4 @@ kotlin-jpa = { id = "org.jetbrains.kotlin.plugin.jpa", version.ref = "kotlin_ver
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin_version" }
 springframework = { id = "org.springframework.boot", version.ref = "spring_version" }
 spring-dependency = { id = "io.spring.dependency-management", version.ref = "spring_dependency_version" }
-bpmnToCode = { id = "io.github.emaarco.bpmn-to-code-gradle", version = "0.0.5-alpha" }
+bpmnToCode = { id = "io.github.emaarco.bpmn-to-code-gradle", version = "0.0.6" }
