--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ kotlin_logging_version = "3.0.5"
 kotlin_jackson = "2.20.0"
 mockito_version = "5.2.0"
 kotlin_mockito_version = "6.1.0"
-zeebe_version = "8.7.13"
+zeebe_version = "8.8.0"
 postgres_version = "42.7.8"
 
 [libraries]
@@ -16,13 +16,13 @@ web = { module = "org.springframework.boot:spring-boot-starter-web", version.ref
 devtools = { module = "org.springframework.boot:spring-boot-devtools", version.ref = "spring_version" }
 jpa = { module = 'org.springframework.boot:spring-boot-starter-data-jpa', version.ref = 'spring_version' }
 postgres = { module = 'org.postgresql:postgresql', version.ref = 'postgres_version' }
-zeebeSdk = { module = "io.camunda:spring-boot-starter-camunda-sdk", version.ref = "zeebe_version" }
+zeebeSdk = { module = "io.camunda:camunda-spring-boot-starter", version.ref = "zeebe_version" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin_version" }
 kotlin_logging = { module = "io.github.microutils:kotlin-logging", version.ref = "kotlin_logging_version" }
 kotlin_jackson = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "kotlin_jackson" }
 
 # testing
-zeebeProcessTest = { module = "io.camunda:zeebe-process-test-extension", version.ref = "zeebe_version" }
+zeebeProcessTest = { module = "io.camunda:camunda-process-test-spring", version.ref = "zeebe_version" }
 spring_test = { module = "org.springframework.boot:spring-boot-starter-test", version.ref = "spring_version" }
 mockito = { module = "org.mockito:mockito-inline", version.ref = "mockito_version" }
 kotlin_mockito = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "kotlin_mockito_version" }
@@ -42,3 +42,4 @@ kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin_version"
 springframework = { id = "org.springframework.boot", version.ref = "spring_version" }
 spring-dependency = { id = "io.spring.dependency-management", version.ref = "spring_dependency_version" }
 bpmnToCode = { id = "io.github.emaarco.bpmn-to-code-gradle", version = "0.0.10" }
+gradleRetryTesting = { id = "org.gradle.test-retry", version = "1.6.4" }
