--- a/services/common-zeebe/src/main/resources/zeebe-application.yaml
+++ b/services/common-zeebe/src/main/resources/zeebe-application.yaml
@@ -1,8 +1,9 @@
 camunda:
   client:
     mode: self-managed
-    zeebe:
-      enabled: true
-      grpc-address: http://localhost:26500
-      rest-address: http://localhost:9600
-      prefer-rest-over-grpc: false
+    prefer-rest-over-grpc: false
+    rest-address: http://localhost:9600
+    grpc-address: http://localhost:26500
+    enabled: true
+    auth:
+      method: none
