--- a/stack/.env
+++ b/stack/.env
@@ -1,12 +1,6 @@
 COMPOSE_PROJECT_NAME=easy-zeebe
 
 ## IMAGE VERSIONS ##
-CAMUNDA_PLATFORM_VERSION=8.7.13
+CAMUNDA_VERSION=8.8.0
 ELASTIC_VERSION=8.15.0
 POSTGRES_VERSION=17.5
-
-## Configuration ##
-ZEEBE_AUTHENTICATION_MODE=none
-
-## ZEEBE
-ZEEBE_SERVER=127.0.0.1:26500
