--- a/stack/docker-compose.yml
+++ b/stack/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     ports:
       - "26500:26500"
       - "9600:9600"
-      - "8088:8080"
+      - "8080:8080"
     restart: always
     healthcheck:
       test: [ "CMD-SHELL", "bash -c 'exec 3<>/dev/tcp/127.0.0.1/9600 && echo -e \"GET /actuator/health/status HTTP/1.1\r\nHost: localhost\r\n\r\n\" >&3 && head -n 1 <&3'" ]
@@ -75,6 +75,9 @@ configs:
     content: |
       management.endpoints.configprops.show-values: always
       camunda:
+        rest:
+          swagger:
+            enabled: true
         system:
           cpu-thread-count: "3"
           io-thread-count: "3"
