--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,10 +5,10 @@ mockk_version = "1.14.9"
 spring_mockk_version = "4.0.2"
 kotlin_version = "2.3.0"
 kotlin_logging_version = "3.0.5"
-kotlin_jackson = "2.20.1"
 mockito_version = "5.2.0"
 kotlin_mockito_version = "6.2.3"
-zeebe_version = "8.8.9"
+zeebe_version = "8.8.13"
+testcontainers_version = "2.0.3"
 postgres_version = "42.7.9"
 
 [libraries]
@@ -27,11 +27,12 @@ mockito = { module = "org.mockito:mockito-inline", version.ref = "mockito_versio
 kotlin_mockito = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "kotlin_mockito_version" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk_version" }
 spring_mockk = { module = "com.ninja-squad:springmockk", version.ref = "spring_mockk_version" }
+testcontainers = { module = "org.testcontainers:testcontainers", version.ref = "testcontainers_version" }
 
 [bundles]
 defaultService = ["kotlin-reflect", "kotlin_logging", "devtools", "web", "zeebeSdk"]
 database = ["jpa", "postgres"]
-test = ["spring_test", "mockito", "mockk", "spring_mockk", "kotlin_mockito"]
+test = ["spring_test", "mockito", "mockk", "spring_mockk", "kotlin_mockito", "testcontainers"]
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin_version" }
